--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,9 +5,10 @@ services:
     build:
       context: ../django_culture
       dockerfile: ./Dockerfile.prod
-    command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
     expose:
       - 8000
     env_file:
@@ -24,6 +25,7 @@ services:
     build: ./nginx
     volumes:
       - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
     ports:
       - 1337:80
     depends_on:
@@ -32,3 +34,4 @@ services:
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
