--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,145 @@
 services:
   web:
-    build: ../django_culture
-    command: python /code/manage.py runserver 0.0.0.0:8000
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: gunicorn backend.wsgi:application -c /app/gunicorn.conf.py
     volumes:
-      - .:/code
+      - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
+      - logs:/var/log/culture
     ports:
-      - 8000:8000
+      - "8001:8001"
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    deploy:
+      replicas: 1
+    restart: unless-stopped
 
   db:
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+      - logs:/var/log/postgresql
+      - /db_backups:/backups
+    env_file:
+      - ./.env
     environment:
-      - POSTGRES_USER=hello_django
-      - POSTGRES_PASSWORD=hello_django
-      - POSTGRES_DB=django_db
+      - POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256
+    expose:
+      - "5432"
+
+    command: >
+      postgres
+      -c shared_preload_libraries=pg_stat_statements
+      -c pg_stat_statements.track=all
+      -c max_connections=200
+      -c shared_buffers=256MB
+      -c effective_cache_size=1GB
+      -c maintenance_work_mem=64MB
+      -c checkpoint_completion_target=0.7
+      -c wal_buffers=16MB
+      -c default_statistics_target=100
+      -c random_page_cost=1.1
+      -c effective_io_concurrency=200
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    restart: unless-stopped
+
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
+      - .:/usr/share/nginx/html:ro
+      - /root/ssl:/etc/nginx/ssl
+      - logs:/var/log/nginx
+      - /root/certbot:/var/www/certbot
+      - /root/letsencrypt:/etc/letsencrypt:ro
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - web
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    restart: unless-stopped
+
+  redis:
+    image: redis:alpine
+    command:
+      - "redis-server"
+      - "--appendonly"
+      - "yes"
+      - "--requirepass"
+      - "j4W58(=1Q<|9"
+    ports:
+      - "6379:6379"
+    volumes:
+      - logs:/var/log/redis
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    restart: unless-stopped
+
+  celery:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    command: celery -A backend worker -l INFO --concurrency=8 --prefetch-multiplier=1
+    volumes:
+      - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
+      - logs:/var/log/culture
+    env_file:
+      - ./.env
+    depends_on:
+      - web
+      - db
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    deploy:
+      replicas: 2
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
+  logs:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./logs
