--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,94 @@
-upstream hello_django {
-    server web:8000;
+upstream sync_server {
+    server web:8001;
 }
 
-server {
+client_max_body_size 21M;
+map $http_upgrade $connection_upgrade {
+    default   upgrade;
+    ''        close;
+}
 
+# HTTP to HTTPS redirect for all subdomains
+server {
     listen 80;
 
+    # Redirect all other HTTP traffic to HTTPS
     location / {
-        proxy_pass http://hello_django;
+        return 301 https://$host$request_uri;
+    }
+}
+
+# App with both frontend and backend
+server {
+    # HSTS
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # API endpoints
+    location /api/ {
+        proxy_pass http://sync_server;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
-        proxy_redirect off;
+        proxy_set_header Cookie $http_cookie;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
     }
 
+    # Auth endpoints
+    location /auth/ {
+        proxy_pass http://sync_server;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_set_header Cookie $http_cookie;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+    }
+
+    # Admin endpoints
+    location /admin/ {
+        proxy_pass http://sync_server;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 300s;
+    }
+
+    # Serve static files for Django
     location /static/ {
-        alias /home/app/web/static/;
+        alias /usr/share/nginx/html/static/;
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000";
     }
 
+    # Serve media files
     location /media/ {
-        alias /home/app/web/media/;
+        alias /usr/share/nginx/html/media/;
+    }
+
+    # Frontend assets
+    location /assets/ {
+        alias /usr/share/nginx/html/dist/assets/;
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    # Serve React app for all other routes (SPA fallback)
+    location / {
+        root /usr/share/nginx/html/dist;
+        try_files $uri $uri/ /index.html;
     }
 }
